# vecdiff

./: .gitignore  pyproject.toml
examples/: aperture_angle_method_comparison.py  arbitrary_cartesian_fft_diopter.py  cartesian_simple.py  circular_simple.py  ex_EL_ER_H2_highNA_exact.py  ex_E_simple.py  ex_acceptance_effect_clean.py  ex_compare_H0_H2_focus_refined.py  ex_compare_exact_vs_paraxial_highNA.py  ex_fc_polarization_study.py  ex_non_scalar_metrics_study.py  ex_plot_bessel_functions.py  ex_plot_fresnel_coeff.py  ex_plot_results_field_primes.py  ex_sweep_acceptance_angle.py  export_results.py  measure_of_spot_size.py
examples/output/: cartesian_simple_diagnostics.txt
examples/output/mplconfig/: fontlist-v390.json
investigation/h2_significance/: CONCLUSIONS.md  results.csv  run_sweep.py
investigation/nondiagonal_and_h2/: minimal.py  minimal_circular.py  minimal_polarization_example.py  polarization_map.py  study.py  viz_utils.py
outputs/acceptance_effect_clean_pure_default/: data.npz  metrics.csv  parameters.json  study_compare_paraxial_vs_exact.csv
outputs/acceptance_effect_clean_split/: param_sweep_top.json
tests/: test_fft_diopter_propagation.py  test_fourier_grid.py  test_polarization_visualization.py  test_view.py
vecdiff/: CartesianSurfaces.py  GOTS_parameters.py  __init__.py  coordinate_transformation.py  field_primes.py  field_reconstruction.py  fields.py  fourier.py  fresnel.py  grid.py  hankel.py  longitudinal.py  polarization.py  polarization_visualization.py  propagation.py  view.py
vecdiff.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+10 files in other folders)
