[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vecdiff"
version = "0.1.0"
description = "Radial Hankel/Fresnel field propagation utilities"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["vecdiff*"]
